<resources>
    <string name="app_name">Privilist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_error_report_text">Send error report to developer?</string>
    <string name="app_id">869155709837986</string>

    <!--Introduction-->
    <string name="btn_facebook">CONNECT WITH FACEBOOK</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_hint">EMAIL</string>
    <string name="password_hint">PASSWORD</string>
    <string name="firstname_hint">FIRST NAME</string>
    <string name="lastname_hint">LAST NAME</string>
    <!--luanlq July 9,2015-->
    <string name="age_hint">DATE OF BIRTH</string>
    <!--luanlq July 9,2015 End.-->
    <string name="age_format">%1$04d-%2$02d-%3$02d</string>
    <string name="age_format2">%1$04d-%2$02d-%3$02d</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <string name="name_invalid">First name and Last name are require.</string>
    <string name="age_invalid">Age is invalid. Should in format yyyy-mm-dd and you must over 21.</string>
    <string name="mail_invalid">Email is invalid.</string>
    <string name="pass_invalid">The password must be at least 8 characters. Not contain space. Has at least 1 character. Has at least 1 number.</string>

    <string name="welcome_to">WELCOME TO</string>
    <string name="privilist">Privilist</string>
    <string name="introduct_dont_waste"><![CDATA[Don\'t Waste Another Moment]]></string>
    <string name="introduct_dont_waste_des"><![CDATA[The night is too short. With a Privilist table, you can skip to front of the line, so don\'t waste another second and dance all night.]]></string>

    <!--Home-->
    <string name="loading_cities">Getting Locations</string>
    <string name="venues">VENUES</string>
    <string name="tonight">ONLY TONIGHT</string>
    <string name="home_event">EVENT</string>
    <string name="table_single">table</string>
    <string name="table_many">tables</string>
    <string name="select_location_hint">Select a city.</string>
    <plurals name="table_left">
        <item quantity="one">%1$d table left</item>
        <item quantity="other">%1$d tables left</item>
    </plurals>

    <!--SignUp-->
    <string name="signup_success">Sign up success.</string>
    <string name="signUp_error">Sign up error.\n%1$s</string>
    <string name="email_taken">The email has already been taken.</string>
    <string name="signin_error">Sign in fail.\n%1$s</string>
    <string name="signin_error_authen">The user credentials were incorrect.</string>

    <!--Event list-->
    <string name="event">Event</string>
    <string name="venue_subtext">%1$s | %2$d - %3$d People | %4$s %5$s</string>
    <string name="default_request_err_msg">Request error.</string>
    <string name="default_request_timeout_msg">Request timeout. Please try again later</string>
    <string name="default_request_network_err_msg">Network error. Please check your network
        connection.</string>
    <string name="default_request_server_err_msg">Request server error.</string>
    <string name="default_empty_msg">No Club or Event found.</string>
    <string name="special_request">SPECIAL REQUEST</string>
    <string name="club_detail_title">Club Details</string>
    <string name="about">ABOUT</string>
    <string name="hours_of_operation">HOURS OF OPERATION</string>
    <string name="dress_code">DRESS CODE</string>
    <string name="fine_print">FINE PRINT</string>
    <string name="dash">-</string>
    <string name="special_request_title">SPECIAL REQUEST</string>
    <string name="minimum_spend_hint">Minimum money going to spend.</string>
    <string name="guests">GUESTS</string>
    <string name="guests_hint">Number of guests</string>
    <string name="date">DATE</string>
    <string name="submit_request">SUBMIT REQUEST</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="special_request_label">SPECIAL REQUESTS</string>
    <string name="phone_number_hint">Your contact number</string>
    <string name="other_special_request_hint">Any other special requests.</string>
    <string name="minimum_spend">MINIMUM SPEND</string>
    <string name="minimum_spend_invalid">Minimum spend is too low.</string>
    <string name="number_of_guests_invalid">Number of guests required.</string>
    <string name="special_request_invalid">Please enter special request message.</string>
    <string name="date_invalid">Please choose an valid date.</string>
    <string name="login_timeout">Your login token is no longer valid.</string>
    <string name="special_result_message">The club will contact you shortly.</string>
    <string name="special_result_title">REQUEST SUBMITTED</string>
    <string name="return_home">RETURN TO HOME</string>
    <string name="sold_out">SOLD OUT</string>
    <string name="table_price_format">%1$s %2$s</string>
    <string name="guests_limit_format">Up to %1$s Guests</string>

    <!-- Profile -->
    <string name="close">Close</string>
    <string name="add_booking">Add Booking</string>

    <string name="select_drink_title">SELECT BOTTLE SERVICE</string>
    <string name="select">SELECT</string>
    <string name="select_drink_total_format">TOTAL: %1$s %2$.2f / MINIMUM: %1$s %3$s</string>
    <string name="select_drink_lower_minimum_warning">Your order is lower than minimum spend</string>
    <string name="book_completed_title">BOOKING COMPLETE</string>
    <string name="booking_code">BOOKING CODE</string>

    <string name="booking_code_hint">INPUT BOOKING CODE</string>
    <string name="addbooking_text">Did you receive an invitation to a Privilist table? Input the booking code to receive a digital ticket.</string>
    <string name="submit">Submit</string>
    <string name="getting_data">GETTING DATA</string>
    <string name="profile">Profile</string>
    <string name="getting_profile">GETTING PROFILE</string>
    <string name="point_history">POINT HISTORY</string>
    <string name="member_perks">MEMBER PERKS</string>
    <string name="ranking">RANKING</string>
    <string name="reward">REWARD</string>

    <string name="check_out_title">CHECK OUT</string>
    <string name="complete_booking">COMPLETE BOOKING</string>
    <string name="venue">VENUE</string>
    <string name="table">TABLE</string>
    <string name="guests_limit">GUEST LIMIT</string>
    <string name="bottle_service">BOTTLE SERVICE</string>
    <string name="check_out_total_format"><![CDATA[Total: <font color=#ffbc32>%1$s %2$s</font>]]></string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="phone_hint">(###) ### - ####</string>
    <string name="name_hint">Name</string>
    <string name="card_num_hint">Card Number</string>
    <string name="expire_date_hint">MM/YY</string>
    <string name="security_code_hint">Security Code</string>
    <string name="scan_card">SCAN CARD</string>
    <string name="checkout_drink_format">%1$s%2$s x %3$d</string>
    <string name="table_sold_out">Table Sold out</string>

    <string name="no_data">No Data</string>
    <string name="point_available"><![CDATA[Point Available: <b>%1$s</b>]]></string>
    <string name="point_accumulated"><![CDATA[Point Accumulated: <b>%1$s</b>]]></string>
    <string name="point_util_upgrade"><![CDATA[Point Util Upgrade: <b>%1$s</b>]]></string>

    <string name="getting_profile_error">Getting profile fail.\n%1$s</string>
    <string name="getting_data_error">Getting data fail.\n%1$s</string>
    <string name="map_title">Map</string>
    <string name="map_api_key">AIzaSyAZ6aQnLmrCGmAUaSsikDyhGqshM-MO5U8</string>

    <string name="bookings">Bookings</string>
    <string name="getting_booking">Getting Bookings</string>
    <string name="upcoming_booking">Upcoming Booking</string>
    <string name="expired_booking">Expired Booking</string>
    <string name="title_activity_maps">Map</string>
    <string name="refer_a_friends">Refer A Friend</string>
    <string name="rewards">Rewards</string>
    <string name="settings">Account Settings</string>
    <string name="abouts">Payment</string>
    <string name="help">Contact us</string>
    <string name="logout">Logout</string>

    <string name="redeem_reward">REDEEM REWARD</string>
    <string name="redeem">REDEEM</string>
    <string name="redeem_success">REWARD REDEEMED</string>
    <string name="reward_code">REWARD CODE</string>
    <string name="redeem_error">Redeem error.\n%1$s</string>
    <string name="redeem_error_not_enough_points">Not enough reward points.</string>
    <string name="bookings_list_empty_msg">You have not booked any tables yet.</string>
    <string name="share">SHARE</string>

    <string name="font_gotham_light">fonts/gotham_light.ttf</string>
    <string name="font_gotham_medium">fonts/gotham_medium.ttf</string>
    <string name="font_gotham_book">fonts/gotham_book.ttf</string>

    <string name="add_booking_already_booked">You have already booked!</string>
    <string name="add_booking_code_not_found">Booking code not found!</string>
    <string name="add_booking_error">Booking fail.\n%1$s</string>
    <string name="referral_code">REFERRAL CODE</string>
    <string name="refer">Refer</string>
    <string name="refer_a_friend">REFER A FRIEND</string>
    <string name="club_closed">Club close on %1$s.</string>
    <string name="no_rank">No Rank</string>
    <string name="full_name">Full Name</string>

    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="gender">GENDER</string>
    <string name="mobile">MOBILE</string>
    <string name="save_changes">Save Changes</string>

    <string name="old_password_hint">OLD PASSWORD</string>
    <string name="new_password_hint">NEW PASSWORD</string>
    <string name="repeat_new_password_hint">REPEAT NEW PASSWORD</string>
    <string name="please_input_old_pass">Please input old password.</string>
    <string name="please_input_new_pass">Please input new password.</string>
    <string name="repeat_password_not_match">Repeat password not match.</string>
    <string name="old_password_error">Old password is not correct.</string>

    <string name="contact_us">CONTACT US</string>
    <string name="service_number"><![CDATA[<font color=#ffbc32>CUSTOMER SERVICE NUMBER</font><br/>%1$s<br/><font color=#ffbc32>Text or call us during:<br/>%2$s</font>]]></string>
    <string name="service_email"><![CDATA[<font color=#ffbc32>CUSTOMER SERVICE EMAIL</font><br/>%1$s]]></string>
</resources>
