<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/common_big_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CommonText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space"
                android:text="@string/minimum_spend"/>

            <EditText
                android:id="@+id/edt_money_spend"
                style="@style/EdtStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimum_spend_hint"
                android:inputType="number"/>

            <TextView
                style="@style/CommonText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space"
                android:text="@string/guests"/>

            <EditText
                android:id="@+id/edt_guests"
                style="@style/EdtStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/guests_hint"
                android:inputType="number"/>

            <TextView
                style="@style/CommonText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/tv_date"
                style="@style/CommonText"
                android:layout_marginTop="@dimen/common_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

            <TextView
                style="@style/CommonText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space"
                android:text="@string/phone"/>

            <EditText
                android:id="@+id/edt_phone"
                style="@style/EdtStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"/>

            <TextView
                style="@style/CommonText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_space"
                android:text="@string/special_request_label"/>

            <EditText
                android:id="@+id/edt_other_request"
                style="@style/EdtBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_border"
                android:gravity="top|left"
                android:padding="@dimen/common_space"
                android:hint="@string/other_special_request_hint"
                android:minHeight="@dimen/other_special_request_min_h"
                android:inputType="text"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_special_request"
        style="@style/BtnStyle.Btm"
        android:text="@string/submit_request"/>
</LinearLayout>