<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.privilist.component.widget.PrivilistEditText
            android:id="@+id/change_password_edt_old_pass"
            style="@style/EdtStyle.AccSet.ChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword" />

        <com.privilist.component.widget.PrivilistEditText
            android:id="@+id/change_password_edt_new_pass"
            style="@style/EdtStyle.AccSet.ChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword" />

        <com.privilist.component.widget.PrivilistEditText
            android:id="@+id/change_password_edt_repeat_new_pass"
            style="@style/EdtStyle.AccSet.ChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/repeat_new_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password_btn_change_pass"
        style="@style/BtnStyle.Btm"
        android:layout_alignParentBottom="true"
        android:text="@string/change_password" />
</RelativeLayout>