<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              android:paddingLeft="@dimen/introduct_padding_left">


    <com.privilist.component.widget.PrivilistTextView
        android:id="@+id/tv_title"
        app:font="@string/font_gotham_light"
        app:fontStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="@color/color_white" />

    <com.privilist.component.widget.PrivilistTextView
        style="@style/CommonText.Bold"
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:text="@string/privilist"
        android:textColor="@color/color_white"
        android:textSize="@dimen/introduct_privilist_text_size" />

</LinearLayout>