<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:paddingLeft="@dimen/common_big_space"
    android:paddingRight="@dimen/common_big_space">
    <TextView
        android:id="@android:id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/special_result_message"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/common_title_text_size"
        android:layout_centerHorizontal="true"
        android:layout_above="@android:id/message"
        android:layout_marginBottom="24dp"
        android:text="@string/special_result_title"/>
    <Button
        android:id="@+id/btnReturnToHome"
        android:gravity="center"
        style="@style/BtnStyle.YellowBorder"
        android:text="@string/return_home"
        android:layout_centerHorizontal="true"
        android:layout_below="@android:id/message"
        android:layout_marginTop="@dimen/common_big_space"/>
</RelativeLayout>