<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/overlay"
    tools:context="com.privilist.frag.sign.SignInFrag">


    <Button
        android:id="@+id/btnSignIn"
        style="@style/BtnStyle.Btm"
        android:text="@string/sign_in" />

    <LinearLayout
        style="@style/InputTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.privilist.component.widget.PrivilistEditText
            android:id="@+id/edt_mail"
            style="@style/EdtStyle.Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/EdtStyle.Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>
</FrameLayout>
