<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_black"
             tools:context="com.privilist.frag.IntroductionFrag">

    <android.support.v4.view.ViewPager
        android:id="@+id/introduction_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <com.viewpagerindicator.IconPageIndicator
        android:id="@+id/pager_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="@dimen/introduct_pager_top"
        android:layout_marginRight="@dimen/common_space">

    </com.viewpagerindicator.IconPageIndicator>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_space"
        android:paddingRight="@dimen/common_space">

        <Button
            android:id="@+id/btnFB"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_space"
            android:text="@string/btn_facebook"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerPadding="@dimen/common_space"
            android:showDividers="middle"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_space"
            android:layout_marginBottom="@dimen/common_space">

            <Button
                android:id="@+id/btnSignUp"
                style="@style/BtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:layout_marginRight="@dimen/common_space"/>

            <Button
                android:id="@+id/btnSignIn"
                style="@style/BtnStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
